--- a/index.html
+++ b/index.html
@@ -11,12 +11,11 @@
 
 <body>
 
-
     <h1>DIVs and SPANs!</h1>
-
 
     <h2>Similarities</h2>
     <ul>
+    <h1> container</h1>
         <li>they are both containers that hold content</li>
         <li>they are invisible by default</li>
         <li>they are styled with <code>&lt;style&gt;</code> and <code>&lt;class&gt;</code></li>
